--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Leagues<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Teams</a></li>
+        <li class="<%= 'active' if current_page?(leagues_path) %>"><%= link_to "Leagues", leagues_path %></li>
+        <li class="<%= 'active' if current_page?(teams_path) %>"><%= link_to "Teams", teams_path %></li>
+        <!-- <li><a class ="nav-link" href="teams">Teams</a></li> -->
  <!--       <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -40,7 +41,7 @@
           </ul>
         </li>
       </ul> -->
-      
+
       <form class="navbar-form navbar-left">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
@@ -64,7 +65,7 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-  
+
     <div class="container">
      <div class="row">
        <div class="col-sm-8">
@@ -78,6 +79,6 @@
 		</div>
 		</div>
 
-    
+
   </body>
 </html>
