--- a/app/views/matches/_form.html.erb
+++ b/app/views/matches/_form.html.erb
@@ -51,6 +51,11 @@
     <%= f.number_field :team2Score %>
   </div>
 
+  <div class="field">
+    <%= f.label :league_id %>
+    <%= f.text_field :league_id %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
