--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -20,5 +20,10 @@
   <%= @player.in_game_role %>
 </p>
 
+<p>
+  <strong>Team:</strong>
+  <%= @player.team %>
+</p>
+
 <%= link_to 'Edit', edit_player_path(@player) %> |
 <%= link_to 'Back', players_path %>
