--- a/app/views/statistics/_form.html.erb
+++ b/app/views/statistics/_form.html.erb
@@ -41,6 +41,21 @@
     <%= f.number_field :ties %>
   </div>
 
+  <div class="field">
+    <%= f.label :team_id %>
+    <%= f.text_field :team_id %>
+  </div>
+
+  <div class="field">
+    <%= f.label :match_id %>
+    <%= f.text_field :match_id %>
+  </div>
+
+  <div class="field">
+    <%= f.label :season_id %>
+    <%= f.text_field :season_id %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
