--- a/app/views/statistics/show.html.erb
+++ b/app/views/statistics/show.html.erb
@@ -30,5 +30,20 @@
   <%= @statistic.ties %>
 </p>
 
+<p>
+  <strong>Team:</strong>
+  <%= @statistic.team %>
+</p>
+
+<p>
+  <strong>Match:</strong>
+  <%= @statistic.match %>
+</p>
+
+<p>
+  <strong>Season:</strong>
+  <%= @statistic.season %>
+</p>
+
 <%= link_to 'Edit', edit_statistic_path(@statistic) %> |
 <%= link_to 'Back', statistics_path %>
