--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -31,6 +31,11 @@
     <%= f.text_field :team_name %>
   </div>
 
+  <div class="field">
+    <%= f.label :league_id %>
+    <%= f.text_field :league_id %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
