--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -20,5 +20,10 @@
   <%= @team.team_name %>
 </p>
 
+<p>
+  <strong>League:</strong>
+  <%= @team.league %>
+</p>
+
 <%= link_to 'Edit', edit_team_path(@team) %> |
 <%= link_to 'Back', teams_path %>
