--- a/app/views/favorites/show.html.erb
+++ b/app/views/favorites/show.html.erb
@@ -10,5 +10,10 @@
   <%= @favorite.playerID %>
 </p>
 
+<p>
+  <strong>User:</strong>
+  <%= @favorite.user %>
+</p>
+
 <%= link_to 'Edit', edit_favorite_path(@favorite) %> |
 <%= link_to 'Back', favorites_path %>
