--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -13,6 +13,7 @@
       <th>Location</th>
       <th>Team1score</th>
       <th>Team2score</th>
+      <th>League</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -28,6 +29,7 @@
         <td><%= match.location %></td>
         <td><%= match.team1Score %></td>
         <td><%= match.team2Score %></td>
+        <td><%= match.league %></td>
         <td><%= link_to 'Show', match %></td>
         <td><%= link_to 'Edit', edit_match_path(match) %></td>
         <td><%= link_to 'Destroy', match, method: :delete, data: { confirm: 'Are you sure?' } %></td>
