--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -40,5 +40,10 @@
   <%= @match.team2Score %>
 </p>
 
+<p>
+  <strong>League:</strong>
+  <%= @match.league %>
+</p>
+
 <%= link_to 'Edit', edit_match_path(@match) %> |
 <%= link_to 'Back', matches_path %>
