--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -31,6 +31,11 @@
     <%= f.text_field :in_game_role %>
   </div>
 
+  <div class="field">
+    <%= f.label :team_id %>
+    <%= f.text_field :team_id %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
