--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -9,6 +9,7 @@
       <th>Age</th>
       <th>Country</th>
       <th>In game role</th>
+      <th>Team</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,7 @@
         <td><%= player.age %></td>
         <td><%= player.country %></td>
         <td><%= player.in_game_role %></td>
+        <td><%= player.team %></td>
         <td><%= link_to 'Show', player %></td>
         <td><%= link_to 'Edit', edit_player_path(player) %></td>
         <td><%= link_to 'Destroy', player, method: :delete, data: { confirm: 'Are you sure?' } %></td>
