--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -11,6 +11,9 @@
       <th>Wins</th>
       <th>Losses</th>
       <th>Ties</th>
+      <th>Team</th>
+      <th>Match</th>
+      <th>Season</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,6 +27,9 @@
         <td><%= statistic.wins %></td>
         <td><%= statistic.losses %></td>
         <td><%= statistic.ties %></td>
+        <td><%= statistic.team %></td>
+        <td><%= statistic.match %></td>
+        <td><%= statistic.season %></td>
         <td><%= link_to 'Show', statistic %></td>
         <td><%= link_to 'Edit', edit_statistic_path(statistic) %></td>
         <td><%= link_to 'Destroy', statistic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
