--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -9,6 +9,7 @@
       <th>Bio</th>
       <th>Coachid</th>
       <th>Team name</th>
+      <th>League</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,7 @@
         <td><%= team.bio %></td>
         <td><%= team.coachID %></td>
         <td><%= team.team_name %></td>
+        <td><%= team.league %></td>
         <td><%= link_to 'Show', team %></td>
         <td><%= link_to 'Edit', edit_team_path(team) %></td>
         <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
