--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ESports2016</title>
+    <title>eSports</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -25,9 +25,12 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Leagues<span class="sr-only">(current)</span></a></li>
+    <!--    <li class="active"><a href="#">Leagues<span class="sr-only">(current)</span></a></li> -->
+        <li><a href="leagues">Leagues</a></li>
         <li><a href="#">Teams</a></li>
- <!--       <li class="dropdown">
+        <li><a href="#">Schedule</a></li>
+	      <li><a href="#">Register/Signin</a></li>
+<!--       <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Action</a></li>
@@ -36,18 +39,18 @@
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a ="#">One more separated link</a></li>
           </ul>
         </li>
       </ul> -->
-      
+
       <form class="navbar-form navbar-left">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" class="form-control" placeholder="Search ...">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
-      <ul class="nav navbar-nav navbar-right">
+      <!-- <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -59,12 +62,12 @@
             <li><a href="#">Separated link</a></li>
           </ul>
         </li>
-      </ul>
+      </ul> -->
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
-  
+
     <div class="container">
      <div class="row">
        <div class="col-sm-8">
@@ -72,12 +75,10 @@
      </div>
 		<div class="col-sm-4">
 		  <div class="slidebar">
-		<h3> All games </h3>
-		<p> Click on somrthing </p>
 		</div>
 		</div>
 		</div>
 
-    
+
   </body>
 </html>
