--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -5,9 +5,8 @@
 <table>
   <thead>
     <tr>
-
       <th>League name</th>
-      <style>p.indent{padding-right: 1.8em}</style><th>Prize money</th>
+      <th>Prize money</th>
       <th colspan="10"></th>
     </tr>
   </thead>
@@ -27,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New League', new_league_path %>
+<!--<%= link_to 'New League', new_league_path %>
