--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,20 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+p.normal {
+    font-style: normal;
+}
+p.italic {
+    font-style: italic;
+}
+p.oblique {
+    font-style: oblique;
+}
+</style>
+</head>
+
+</html>
   <head>
     <title>eSports</title>
     <%= csrf_meta_tags %>
@@ -38,7 +53,7 @@
 
 
         <!-- Split button -->
-      <li><a> <div class="btn-group">
+      <li><div class="btn-group">
           <button type="button" class="btn btn-default"><li class="<%= 'active' if current_page?(leagues_path) %>"><%= link_to "Leagues", leagues_path %></li></button>
           <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="caret"></span>
@@ -50,35 +65,7 @@
             <li><a href="#">Overwatch</a></li>
             <li><a href="#">Dota 2</a></li>
           </ul>
-        </div> </a></li>
-
-<!--<div class="btn-group" role="group" aria-label="...">
-  <li class="<%= 'active' if current_page?(leagues_path) %>"><%= link_to "Leagues", leagues_path %></li>
- <div class="btn-group" role="group">
-   <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-     <<span class="caret"></span>
-    </button>
-    <ul class="dropdown-menu">
-      <li><a href="#">Dropdown link</a></li>
-      <li><a href="#">Dropdown link</a></li>
-    </ul>
-  </div>
-</div> -->
-
-
-              <!--  <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Leagues<span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a ="#">One more separated link</a></li>
-                  </ul>
-                </li>
-              </ul> -->
+        </div></li>
 
 
 
@@ -90,41 +77,84 @@
             </button>
 
               <ul class="dropdown-menu">
-              <ul class="aria-labelledby="dropdownMenuDivider">
-                <small> CS:GO </small>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Cloud 9</a></li>
-                <li><a href="#">NiP</a></li>
-                <li><a href="#">Fnatic</a></li>
-                <li><a href="#">SK Gaming</a></li>
-                </ul>
-                <ul class="aria-labelledby="dropdownMenuDivider">
+         <ul class="aria-labelledby="dropdownMenuDivider">
                 <span><small>  Leauge of Legends </small></span>
                   <li role="separator" class="divider"></li>
                   <li><a href="#">SKT T1 </a></li>
                   <li><a href="#">Samsung Galaxy </a></li>
                   <li><a href="#">Saigon Jokers </a></li>
                   <li><a href="#">Team Solomid </a></li>
-                  </ul>
-                  <ul class="aria-labelledby="dropdownMenuDivider">
+        </ul>
+         <ul class="aria-labelledby="dropdownMenuDivider">
+                <small> Counter-Strike: Global Offensive </small>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Cloud9</a></li>
+                <li><a href="#">NiP</a></li>
+                <li><a href="#">Fnatic</a></li>
+                <li><a href="#">SK Gaming</a></li>
+        </ul>
+         <ul class="aria-labelledby="dropdownMenuDivider">
+                  Overwatch
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#">Rogue </a></li>
+                  <li><a href="#">Team EnVyUs </a></li>
+                  <li><a href="#">Misfits </a></li>
+                  <li><a href="#">melty eSports</a></li>
+         </ul>
+          <ul class="aria-labelledby="dropdownMenuDivider">
                     Dota 2
                     <li role="separator" class="divider"></li>
                     <li><a href="#">Digital Chaos </a></li>
                     <li><a href="#">Team NP </a></li>
                     <li><a href="#">Infamous </a></li>
                     <li><a href="#">Team Liquid </a></li>
-                    </ul>
+          </ul>
+
+                  </ul>
+                </div> </li>
+
+                  <li> <div class="btn-group">
+                      <button type="button" class="btn btn-default"><li class="<%= 'active' if current_page?(matches_path) %>"><%= link_to "Matches", matches_path %></li></button>
+                      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <span class="caret"></span>
+                        <span class="sr-only">Toggle Dropdown</span>
+                      </button>
+                      <ul class="dropdown-menu">
+
+                    Upcoming Matches
+
+                   <ul class="aria-labelledby="dropdownMenuDivider">
+                    <body> <p class="italic">Leauge of Legends</p></body>
+                            <li role="separator" class="divider"></li>
+                            SKT T1 vs Team Solomid
+                            <small> Nov 30 @ 15:00 MT </small> </ul>
+
+                   <ul class="aria-labelledby="dropdownMenuDivider">
+                     <body> <p class="italic">Counter-Strike: Global Offensive</p></body>
+                            <li role="separator" class="divider"></li>
+                            Cloud9 vs NiP
+                            <small> Nov 30 @ 19:00 MT </small> </ul>
 
                     <ul class="aria-labelledby="dropdownMenuDivider">
-                      Overwatch
-                      <li role="separator" class="divider"></li>
-                      <li><a href="#">Rogue </a></li>
-                      <li><a href="#">Team EnVyUs </a></li>
-                      <li><a href="#">Misfits </a></li>
-                      <li><a href="#">melty eSports</a></li>
-                      </ul>
-                    </ul>
-                  </div> </li>
+                    <br/><body> <p class="italic">Overwatch</p></body>
+                           <li role="separator" class="divider"></li>
+                            TeamEnvyUs vs Misfits
+                           <small> Nov 31 @ 16:00 MT </small> </ul>
+
+                        <div align="left">Current Matches
+                    <ul class="aria-labelledby="dropdownMenuDivider">
+                            Leauge of Legends
+                       <li role="separator" class="divider"></li>
+                        Samsung Galaxy vs Saigon Jokers       </ul>
+
+                    <ul class="aria-labelledby="dropdownMenuDivider">
+                              Dota 2
+                         <li role="separator" class="divider"></li>
+                          Team NP vs Team Liquid          </ul>
+
+
+
+                  </ul> </div></div></li>
 
 
 
@@ -140,7 +170,9 @@
 
 
 
-        <li><a href="#">Schedule</a></li>
+
+
+
 	      <li><a href="#">Register/Signin</a></li>
 <!--       <li class="dropdown">
 =======
