--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,9 +34,6 @@ p.oblique {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
       </button>
 
 
@@ -53,7 +50,7 @@ p.oblique {
 
 
         <!-- Split button -->
-      <li><div class="btn-group">
+      <li class ="pad" ><div class="btn-group">
           <button type="button" class="btn btn-default"><li class="<%= 'active' if current_page?(leagues_path) %>"><%= link_to "Leagues", leagues_path %></li></button>
           <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="caret"></span>
@@ -67,51 +64,47 @@ p.oblique {
           </ul>
         </div></li>
 
-
-
-        <li><div class="btn-group">
-            <button type="button" class="btn btn-default"><li class="<%= 'active' if current_page?(teams_path) %>"><%= link_to "Teams", teams_path %></li></button>
+           <li class ="pad"><div class="btn-group">
+           <button type="button" class="btn btn-default"><li class="<%= 'active' if current_page?(teams_path) %>"><%= link_to "Teams", teams_path %></li></button>
             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
               <span class="sr-only">Toggle Dropdown</span>
             </button>
 
               <ul class="dropdown-menu">
-         <ul class="aria-labelledby="dropdownMenuDivider">
-                <span><small>  Leauge of Legends </small></span>
+         <ul caria-labelledby="dropdownMenuDivider">
+                  Leauge of Legends
                   <li role="separator" class="divider"></li>
-                  <li><a href="#">SKT T1 </a></li>
-                  <li><a href="#">Samsung Galaxy </a></li>
-                  <li><a href="#">Saigon Jokers </a></li>
-                  <li><a href="#">Team Solomid </a></li>
+                  <ul><a href="#">SKT T1 </a></ul>
+                  <ul><a href="#">Samsung Galaxy </a></ul>
+                  <ul><a href="#">Saigon Jokers </a></ul>
+                  <ul><a href="#">Team Solomid </a></ul>
         </ul>
-         <ul class="aria-labelledby="dropdownMenuDivider">
-                <small> Counter-Strike: Global Offensive </small>
+         <br><ul caria-labelledby="dropdownMenuDivider">
+                Counter-Strike: Global Offensive
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Cloud9</a></li>
-                <li><a href="#">NiP</a></li>
-                <li><a href="#">Fnatic</a></li>
-                <li><a href="#">SK Gaming</a></li>
-        </ul>
-         <ul class="aria-labelledby="dropdownMenuDivider">
+                <ul><a href="#">Cloud9</a></ul>
+                <ul><a href="#">NiP</a></ul>
+                <ul><a href="#">Fnatic</a></ul>
+                <ul><a href="#">SK Gaming</a></ul>
+        </ul> </br>
+         <ul caria-labelledby="dropdownMenuDivider">
                   Overwatch
                   <li role="separator" class="divider"></li>
-                  <li><a href="#">Rogue </a></li>
-                  <li><a href="#">Team EnVyUs </a></li>
-                  <li><a href="#">Misfits </a></li>
-                  <li><a href="#">melty eSports</a></li>
+                  <ul><a href="#">Rogue </a></ul>
+                  <ul><a href="#">Team EnVyUs </a></ul>
+                  <ul><a href="#">Misfits </a></ul>
+                  <ul><a href="#">melty eSports</a></ul>
          </ul>
-          <ul class="aria-labelledby="dropdownMenuDivider">
+         <br><ul caria-labelledby="dropdownMenuDivider">
                     Dota 2
                     <li role="separator" class="divider"></li>
-                    <li><a href="#">Digital Chaos </a></li>
-                    <li><a href="#">Team NP </a></li>
-                    <li><a href="#">Infamous </a></li>
-                    <li><a href="#">Team Liquid </a></li>
-          </ul>
-
-                  </ul>
-                </div> </li>
+                    <ul><a href="#">Digital Chaos </a></ul>
+                    <ul><a href="#">Team NP </a></ul>
+                    <ul><a href="#">Infamous </a></ul>
+                    <ul><a href="#">Team Liquid </a></ul>
+          </ul></br>
+        </ul></div> </li>
 
                   <li> <div class="btn-group">
                       <button type="button" class="btn btn-default"><li class="<%= 'active' if current_page?(matches_path) %>"><%= link_to "Matches", matches_path %></li></button>
@@ -123,76 +116,37 @@ p.oblique {
 
                     Upcoming Matches
 
-                   <ul class="aria-labelledby="dropdownMenuDivider">
+                   <ul caria-labelledby="dropdownMenuDivider">
                     <body> <p class="italic">Leauge of Legends</p></body>
                             <li role="separator" class="divider"></li>
                             SKT T1 vs Team Solomid
                             <small> Nov 30 @ 15:00 MT </small> </ul>
 
-                   <ul class="aria-labelledby="dropdownMenuDivider">
+                  <br> <ul caria-labelledby="dropdownMenuDivider"> </br>
                      <body> <p class="italic">Counter-Strike: Global Offensive</p></body>
                             <li role="separator" class="divider"></li>
                             Cloud9 vs NiP
                             <small> Nov 30 @ 19:00 MT </small> </ul>
 
-                    <ul class="aria-labelledby="dropdownMenuDivider">
+                  <ul caria-labelledby="dropdownMenuDivider">
                     <br/><body> <p class="italic">Overwatch</p></body>
                            <li role="separator" class="divider"></li>
                             TeamEnvyUs vs Misfits
                            <small> Nov 31 @ 16:00 MT </small> </ul>
 
-                        <div align="left">Current Matches
-                    <ul class="aria-labelledby="dropdownMenuDivider">
-                            Leauge of Legends
+                    <br>    <div align="left">Current Matches</br>
+                    <ul caria-labelledby="dropdownMenuDivider">
+                        <body> <p class="italic">Leauge of Legends</p></body>
                        <li role="separator" class="divider"></li>
                         Samsung Galaxy vs Saigon Jokers       </ul>
 
-                    <ul class="aria-labelledby="dropdownMenuDivider">
-                              Dota 2
+                  <br> <ul caria-labelledby="dropdownMenuDivider">
+                          <body> <p class="italic">Dota 2</p></body>
                          <li role="separator" class="divider"></li>
-                          Team NP vs Team Liquid          </ul>
-
-
-
+                          Team NP vs Team Liquid          </ul> </br>
                   </ul> </div></div></li>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	      <li><a href="#">Register/Signin</a></li>
-<!--       <li class="dropdown">
-=======
-        <li class="<%= 'active' if current_page?(leagues_path) %>"><%= link_to "Leagues", leagues_path %></li>
-        <li class="<%= 'active' if current_page?(teams_path) %>"><%= link_to "Teams", teams_path %></li>
-        <!-- <li><a class ="nav-link" href="teams">Teams</a></li> -->
- <!--       <li class="dropdown">
->>>>>>> cf897182c1366b26c7cee0a0a9c2fa6c5124d49d
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a ="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul> -->
+<div align ="right"><a> Register/Signin </a></div>
 
      <form class="navbar-form navbar-left">
         <div class="form-group">
