--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,8 +38,8 @@ p.oblique {
 
 
 
-      <a class="navbar-brand" href="/">eSports</a>
-    </div>
+      <h1><a class="navbar-brand" href="/">eSports</a></h1>
+    <!--</div> -->
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -144,16 +144,20 @@ p.oblique {
                           <body> <p class="italic">Dota 2</p></body>
                          <li role="separator" class="divider"></li>
                           Team NP vs Team Liquid          </ul> </br>
-                  </ul> </div></div></li>
+                  </ul> </div></li>
+
+                  <form class="navbar-form navbar-left">
+                     <div class="form-group">
+                       <input type="text" class="form-control" placeholder="Search ...">
+                     </div>
+                     <button type="submit" class="btn btn-default">Submit</button>
+                   </form>
+      </div>
+</div>
 
 <div align ="right"><a> Register/Signin </a></div>
 
-     <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search ...">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+
       <!-- <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a></li>
         <li class="dropdown">
