--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -5,9 +5,9 @@
 <table>
   <thead>
     <tr>
-      <th>Bio</th>
-      <th>Coachid</th>
       <th>Team name</th>
+      <th>Bio</th>
+      <th>Coach ID</th>
       <th>League</th>
       <th colspan="3"></th>
     </tr>
@@ -16,18 +16,12 @@
   <tbody>
     <% @teams.each do |team| %>
       <tr>
+        <td><%= team.team_name %></td>
         <td><%= team.bio %></td>
         <td><%= team.coachID %></td>
-        <td><%= team.team_name %></td>
-        <td><%= team.league %></td>
+        <td><%= League.find(String(team.league_id)).league_name %></td>
         <td><%= link_to 'Show', team %></td>
-        <td><%= link_to 'Edit', edit_team_path(team) %></td>
-        <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Team', new_team_path %>
