Restructure application.html.erb to correct HTML. Minor edits to styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,3 +24,10 @@ th {
 td {
   padding: 5px;
 }
+
+.header-pad {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 10px;
+  padding-left: 10px;
+}
