--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,191 +1,168 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-p.normal {
-    font-style: normal;
-}
-p.italic {
-    font-style: italic;
-}
-p.oblique {
-    font-style: oblique;
-}
-</style>
-</head>
-
-</html>
   <head>
     <title>eSports</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-</head>
+  </head>
 
-<body>
+  <body>
 
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-
-
-
-      <h1><a class="navbar-brand" href="/">eSports</a></h1>
-    <!--</div> -->
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-
-
-
-
-
-        <!-- Split button -->
-      <li class ="pad" ><div class="btn-group">
-          <button type="button" class="btn btn-default"><li class="<%= 'active' if current_page?(leagues_path) %>"><%= link_to "Leagues", leagues_path %></li></button>
-          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="caret"></span>
-            <span class="sr-only">Toggle Dropdown</span>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
           </button>
-          <ul class="dropdown-menu">
-            <% League.select("league_name").each do |league| %>
-              <li><a href="/leagues/<%= league.id %>"><%= league.league_name %></a></li>
-            <% end %>
-          </ul>
-        </div></li>
 
-           <li class ="pad"><div class="btn-group">
-           <button type="button" class="btn btn-default"><li class="<%= 'active' if current_page?(teams_path) %>"><%= link_to "Teams", teams_path %></li></button>
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <span class="caret"></span>
-              <span class="sr-only">Toggle Dropdown</span>
-            </button>
+          <a class="navbar-brand" href="/">eSports</a>
+        </div>
 
-              <ul class="dropdown-menu">
-         <ul caria-labelledby="dropdownMenuDivider">
-                  Leauge of Legends
-                  <li role="separator" class="divider"></li>
-                  <ul><a href="#">SKT T1 </a></ul>
-                  <ul><a href="#">Samsung Galaxy </a></ul>
-                  <ul><a href="#">Saigon Jokers </a></ul>
-                  <ul><a href="#">Team Solomid </a></ul>
-        </ul>
-         <br><ul caria-labelledby="dropdownMenuDivider">
-                Counter-Strike: Global Offensive
-                <li role="separator" class="divider"></li>
-                <ul><a href="#">Cloud9</a></ul>
-                <ul><a href="#">NiP</a></ul>
-                <ul><a href="#">Fnatic</a></ul>
-                <ul><a href="#">SK Gaming</a></ul>
-        </ul> </br>
-         <ul caria-labelledby="dropdownMenuDivider">
-                  Overwatch
-                  <li role="separator" class="divider"></li>
-                  <ul><a href="#">Rogue </a></ul>
-                  <ul><a href="#">Team EnVyUs </a></ul>
-                  <ul><a href="#">Misfits </a></ul>
-                  <ul><a href="#">melty eSports</a></ul>
-         </ul>
-         <br><ul caria-labelledby="dropdownMenuDivider">
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <!-- Leagues spilt button -->
+            <li class="header-pad">
+              <div class="btn-group">
+                <button type="button" class="btn btn-default"><li class="<%= 'active' if current_page?(leagues_path) %>"><%= link_to "Leagues", leagues_path %></li></button>
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <span class="caret"></span>
+                  <span class="sr-only">Toggle Dropdown</span>
+                </button>
+                <ul class="dropdown-menu">
+                  <% League.select("league_name").each do |league| %>
+                    <li><a href="/leagues/<%= league.id %>"><%= league.league_name %></a></li>
+                  <% end %>
+                </ul>
+              </div>
+            </li>
+            <!-- Teams spilt button -->
+            <li class="header-pad">
+              <div class="btn-group">
+                <button type="button" class="btn btn-default"><li class="<%= 'active' if current_page?(teams_path) %>"><%= link_to "Teams", teams_path %></li></button>
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <span class="caret"></span>
+                  <span class="sr-only">Toggle Dropdown</span>
+                </button>
+                <ul class="dropdown-menu">
+                  <ul caria-labelledby="dropdownMenuDivider">
+                    Leauge of Legends
+                    <li role="separator" class="divider"></li>
+                    <ul><a href="#">SKT T1 </a></ul>
+                    <ul><a href="#">Samsung Galaxy </a></ul>
+                    <ul><a href="#">Saigon Jokers </a></ul>
+                    <ul><a href="#">Team Solomid </a></ul>
+                  </ul>
+                  <br>
+                  <ul caria-labelledby="dropdownMenuDivider">
+                    Counter-Strike: Global Offensive
+                    <li role="separator" class="divider"></li>
+                    <ul><a href="#">Cloud9</a></ul>
+                    <ul><a href="#">NiP</a></ul>
+                    <ul><a href="#">Fnatic</a></ul>
+                    <ul><a href="#">SK Gaming</a></ul>
+                  </ul>
+                  <br>
+                  <ul caria-labelledby="dropdownMenuDivider">
+                    Overwatch
+                    <li role="separator" class="divider"></li>
+                    <ul><a href="#">Rogue </a></ul>
+                    <ul><a href="#">Team EnVyUs </a></ul>
+                    <ul><a href="#">Misfits </a></ul>
+                    <ul><a href="#">melty eSports</a></ul>
+                  </ul>
+                  <br>
+                  <ul caria-labelledby="dropdownMenuDivider">
                     Dota 2
                     <li role="separator" class="divider"></li>
                     <ul><a href="#">Digital Chaos </a></ul>
                     <ul><a href="#">Team NP </a></ul>
                     <ul><a href="#">Infamous </a></ul>
                     <ul><a href="#">Team Liquid </a></ul>
-          </ul></br>
-        </ul></div> </li>
-
-                  <li> <div class="btn-group">
-                      <button type="button" class="btn btn-default"><li class="<%= 'active' if current_page?(matches_path) %>"><%= link_to "Matches", matches_path %></li></button>
-                      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <span class="caret"></span>
-                        <span class="sr-only">Toggle Dropdown</span>
-                      </button>
-                      <ul class="dropdown-menu">
-
-                    Upcoming Matches
-
-                   <ul caria-labelledby="dropdownMenuDivider">
-                    <body> <p class="italic">Leauge of Legends</p></body>
-                            <li role="separator" class="divider"></li>
-                            SKT T1 vs Team Solomid
-                            <small> Nov 30 @ 15:00 MT </small> </ul>
-
-                  <br> <ul caria-labelledby="dropdownMenuDivider"> </br>
-                     <body> <p class="italic">Counter-Strike: Global Offensive</p></body>
-                            <li role="separator" class="divider"></li>
-                            Cloud9 vs NiP
-                            <small> Nov 30 @ 19:00 MT </small> </ul>
-
+                  </ul>
+                </ul>
+              </div>
+            </li>
+            <!-- Matches spilt button -->
+            <li class="header-pad">
+              <div class="btn-group">
+                <button type="button" class="btn btn-default"><li class="<%= 'active' if current_page?(matches_path) %>"><%= link_to "Matches", matches_path %></li></button>
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <span class="caret"></span>
+                  <span class="sr-only">Toggle Dropdown</span>
+                </button>
+                <ul class="dropdown-menu">
+                  Upcoming Matches
                   <ul caria-labelledby="dropdownMenuDivider">
-                    <br/><body> <p class="italic">Overwatch</p></body>
-                           <li role="separator" class="divider"></li>
-                            TeamEnvyUs vs Misfits
-                           <small> Nov 31 @ 16:00 MT </small> </ul>
-
-                    <br>    <div align="left">Current Matches</br>
+                    <p class="italic">Leauge of Legends</p>
+                    <li role="separator" class="divider"></li>
+                    SKT T1 vs Team Solomid
+                    <small> Nov 30 @ 15:00 MT </small>
+                  </ul>
+                  <ul caria-labelledby="dropdownMenuDivider">
+                    <p class="italic">Counter-Strike: Global Offensive</p>
+                    <li role="separator" class="divider"></li>
+                    Cloud9 vs NiP
+                    <small>Nov 30 @ 19:00 MT</small>
+                  </ul>
+                  <ul caria-labelledby="dropdownMenuDivider">
+                    <p class="italic">Overwatch</p>
+                    <li role="separator" class="divider"></li>
+                    TeamEnvyUs vs Misfits
+                    <small> Nov 31 @ 16:00 MT </small>
+                  </ul>
+                  <br>
+                  <div align="left">
+                    Current Matches
                     <ul caria-labelledby="dropdownMenuDivider">
-                        <body> <p class="italic">Leauge of Legends</p></body>
-                       <li role="separator" class="divider"></li>
-                        Samsung Galaxy vs Saigon Jokers       </ul>
-
-                  <br> <ul caria-labelledby="dropdownMenuDivider">
-                          <body> <p class="italic">Dota 2</p></body>
-                         <li role="separator" class="divider"></li>
-                          Team NP vs Team Liquid          </ul> </br>
-                  </ul> </div></li>
-
-                  <form class="navbar-form navbar-left">
-                     <div class="form-group">
-                       <input type="text" class="form-control" placeholder="Search ...">
-                     </div>
-                     <button type="submit" class="btn btn-default">Submit</button>
-                   </form>
-      </div>
-</div>
-
-<div align ="right"><a> Register/Signin </a></div>
-
-
-      <!-- <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+                      <p class="italic">Leauge of Legends</p>
+                      <li role="separator" class="divider"></li>
+                      Samsung Galaxy vs Saigon Jokers
+                    </ul>
+                    <ul caria-labelledby="dropdownMenuDivider">
+                      <p class="italic">Dota 2</p>
+                      <li role="separator" class="divider"></li>
+                      Team NP vs Team Liquid
+                    </ul>
+                  </div>
+                </ul>
+              </div>
+            </li>
+            <!-- Search bar and submit button -->
+            <li class="header-pad">
+              <form class="header-pad form-inline">
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Search...">
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+              </form>
+            </li>
+            <!-- Registration/Sign in link/button -->
+            <li class="header-pad">
+              <button class="btn btn-link" href="/">Register/Sign in</button>
+            </li>
           </ul>
-        </li>
-      </ul> -->
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+        </div><!-- /.navbar-collapse -->
 
+      </div><!-- /.container-fluid -->
+    </nav>
 
     <div class="container">
-     <div class="row">
-       <div class="col-sm-8">
-         <%= yield %>
-     </div>
-		<div class="col-sm-4">
-		  <div class="slidebar">
-		</div>
-		</div>
-		</div>
-
+      <div class="row">
+        <div class="col-sm-8">
+          <%= yield %>
+        </div>
+		    <div class="col-sm-4">
+		      <div class="slidebar">
+          </div>
+		    </div>
+		  </div>
+    </div>
 
   </body>
 </html>
