Do not allow the public user to edit or delete data from the controller pages.

--- a/app/views/matches/_form.html.erb
+++ b/app/views/matches/_form.html.erb
@@ -22,13 +22,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :match_time %>
-    <%= f.text_field :match_time %>
-  </div>
-
-  <div class="field">
-    <%= f.label :match_date %>
-    <%= f.text_field :match_date %>
+    <%= f.label :match_date_time %>
+    <%= f.text_field :match_date_time %>
   </div>
 
   <div class="field">
