--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -5,10 +5,9 @@
 <table>
   <thead>
     <tr>
-      <th>Team1id</th>
-      <th>Team2id</th>
-      <th>Match time</th>
-      <th>Match date</th>
+      <th>Team 1</th>
+      <th>Team 2</th>
+      <th>Match Date/Time</th>
       <th>Location</th>
       <th>Team1score</th>
       <th>Team2score</th>
@@ -20,22 +19,15 @@
   <tbody>
     <% @matches.each do |match| %>
       <tr>
-        <td><%= match.team1ID %></td>
-        <td><%= match.team2ID %></td>
-        <td><%= match.match_time %></td>
-        <td><%= match.match_date %></td>
+        <td><%= Team.where(id: match.team1ID).first.team_name %></td>
+        <td><%= Team.where(id: match.team2ID).first.team_name %></td>
+        <td><%= match.match_date_time %></td>
         <td><%= match.location %></td>
         <td><%= match.team1Score %></td>
         <td><%= match.team2Score %></td>
-        <td><%= match.league %></td>
+        <td><%= League.where(id: match.league_id).first.league_name %></td>
         <td><%= link_to 'Show', match %></td>
-        <td><%= link_to 'Edit', edit_match_path(match) %></td>
-        <td><%= link_to 'Destroy', match, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Match', new_match_path %>
