--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= team.team_name %></td>
         <td><%= team.bio %></td>
         <td><%= team.coachID %></td>
-        <td><%= League.find(String(team.league_id)).league_name %></td>
+        <td><%= League.where(id: team.league_id).first.league_name %></td>
         <td><%= link_to 'Show', team %></td>
       </tr>
     <% end %>
