Update homepage to use leagues and data from database

--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -32,7 +32,7 @@
 
 <p>
   <strong>League:</strong>
-  <%= @match.league %>
+  <%= League.where(id: @match.league_id).first.league_name %>
 </p>
 
 <%= link_to 'Back', matches_path %>
