Add 'Show' link back to Leagues page

--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -21,6 +21,7 @@
             <%= 0 %>
           <% end %>
         </td>
+        <td><%= link_to 'Show', league %></td>
       </tr>
     <% end %>
   </tbody>
