--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -7,20 +7,18 @@
     <tr>
       <th>Team name</th>
       <th>Bio</th>
-      <th>Coach ID</th>
+      <th>Coach</th>
       <th>League</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @teams.each do |team| %>
       <tr>
-        <td><%= team.team_name %></td>
+        <td><a href='/teams/<%=team.id%>'><%= team.team_name %><a/></td>
         <td><%= team.bio %></td>
         <td><%= team.coachID %></td>
         <td><%= League.where(id: team.league_id).first.league_name %></td>
-        <td><%= link_to 'Show', team %></td>
       </tr>
     <% end %>
   </tbody>
