working slider with dummy images

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,10 +9,10 @@
 <body>
 
 
-<div class="w3-content w3-section" style="height: 150px; width: 100%;">
-  <img class="mySlides" src="/images/img_la.jpg" style="height: 150px; width: 100%;">
-  <img class="mySlides" src="/images/img_la.jpg" style="height: 150px; width: 100%;">
-  <img class="mySlides" src="/images/img_la.jpg" style="height: 150px; width: 100%;">
+<div style="height: 250px; width: 100%;">
+  <img class="mySlides" src="/images/i1.jpg" style="height: 250px; width: 100%;">
+  <img class="mySlides" src="/images/i2.jpg" style="height: 250px; width: 100%;">
+  <img class="mySlides" src="/images/i3.jpg" style="height: 250px; width: 100%;">
 </div>
 
 <script>
