--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,6 +3,7 @@
 <title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+ <link rel="stylesheet" href="/assests/stylesheets/nav.css">
 <style>
 .mySlides {display:none;}
 </style>
@@ -31,6 +32,22 @@ function carousel() {
     setTimeout(carousel, 2000); // Change image every 2 seconds
 }
 </script>
+
+
+
+  <header>
+    <div class="nav">
+      <ul>
+        <li class="home"><a href="#">Home</a></li>
+        <li class="Leagues"><a class="active" href="#">Leagues</a></li>
+        <li class="Teams"><a href="#">Teams</a></li>
+        <li class="Schedule"><a href="#">Schedule</a></li>
+        <li class="Results"><a href="#">Results</a></li>
+        <li class="About"><a href="#">About</a></li>
+      </ul>
+    </div>
+  </header>
+
 
 </body>
 </html>
