create team link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,6 +112,9 @@
             <%= link_to "Favourites", favorites_path%>
 
           </li>
+          <li class="header-pad">
+            <%= link_to "Teams", teams_path%>
+          </li>
             <li class="header-pad">
 
 <% if user_signed_in? %>
