--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,20 @@
+
 <html>
+<head>
+
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="keywords" content="footer, links, icons" />
+
+	<title>Distributed Footer</title>
+
+	<link rel="stylesheet" href="css/demo.css">
+	<link rel="stylesheet" href="css/footer-distributed.css">
+
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+
+</head>
 <body>
   <footer class="footer-distributed">
 
@@ -6,8 +22,8 @@
 
   				<a href="#"><i class="fa fa-facebook"></i></a>
   				<a href="#"><i class="fa fa-twitter"></i></a>
-  				<a href="#"><i class="fa fa-linkedin"></i></a>
-  				<a href="#"><i class="fa fa-github"></i></a>
+  				<a href="#"><i class="fa fa-twitch"></i></a>
+  				<a href="#"><i class="fa fa-youtube"></i></a>
 
   			</div>
 
@@ -15,19 +31,17 @@
 
   				<p class="footer-links">
   					<a href="#">Home</a>
-  					·
-  					<a href="#">Blog</a>
-  					·
-  					<a href="#">Pricing</a>
-  					·
-  					<a href="#">About</a>
-  					·
-  					<a href="#">Faq</a>
-  					·
-  					<a href="#">Contact</a>
-  				</p>
 
-  				<p>Company Name &copy; 2015</p>
+  					<s class="padding-right"><a href="#">Leagues</a></s>
+
+            <s class="padding-right"><a href="#">Prizes</a></s>
+
+  					<s class="padding-right"><a href="#">About</a></s>
+
+  					<s class="padding-right"><a href="#">Contact</a></s>
+  				</p>
+          <br>
+  				<p>eSports &copy; 2016</p>
   			</div>
 
   		</footer>
