Fixed button links

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -32,7 +32,7 @@
   				<p class="footer-links">
   					<a href="#">Home</a>
 
-  					<s class="padding-right"><a href="#">Leagues</a></s>
+  					<s class="padding-right"><a href="/">Leagues</a></s>
 
             <s class="padding-right"><a href="#">Prizes</a></s>
 
