--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,10 +40,10 @@ function carousel() {
   <header>
     <div class="nav">
       <ul>
-        <li class="home"><a href="#">Home</a></li>
-        <li class="Leagues"><a class="active" href="#">Leagues</a></li>
-        <li class="Teams"><a href="#">Teams</a></li>
-        <li class="Schedule"><a href="#">Schedule</a></li>
+        <li class="home"><a href="/">Home</a></li>
+        <li class="Leagues"><a class="active" href="/leagues">Leagues</a></li>
+        <li class="Teams"><a href="/teams">Teams</a></li>
+        <li class="Schedule"><a href="/matches">Schedule</a></li>
         <li class="Results"><a href="#">Results</a></li>
         <li class="About"><a href="#">About</a></li>
         <li><li>
@@ -81,7 +81,7 @@ function carousel() {
                   </form>
                 </div>
           </div>
-        </div> 
+        </div>
       </ul>
     </div>
  </header>
