--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -42,6 +42,8 @@
   				</p>
           <br>
   				<p>eSports &copy; 2016</p>
+					<p>Main Event - G Center</p>
+					<p>Dec 25 - 30, 2016</p>
   			</div>
 
   		</footer>
