--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -59,17 +59,18 @@ function carousel() {
         </li>
         <% end %></li>
 <!-- Method 1 -->
-<!--      <li class="header-pad">
+
+        <li class="header-pad">
           <form class="header-pad form-inline">
             <div class="form-group">
               <input type="text" class="form-control" placeholder="Search...">
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
-        </li> -->
+        </li>
 
 <!-- Method 2 -->
-      <div class="container">
+      <!--  <div class="container">
         <div class="row">
               <div class="col-md-4 col-md-offset-3">
                   <form action="" class="search-form">
@@ -81,7 +82,7 @@ function carousel() {
                   </form>
                 </div>
           </div>
-        </div>
+        </div> -->
       </ul>
     </div>
  </header>
