Rename photos and add bootstrap to homepage (rows and cols)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -172,3 +172,10 @@ p.no_matches {
 li.players {
   list-style-type: none;
 }
+
+//Img formatting
+img.league_logo {
+  max-width: 100%;
+  max-height: 100%;
+  height: inherit;
+}
